run success in my env, yaml changed

--- a/config/spec_roll.yaml
+++ b/config/spec_roll.yaml
@@ -8,7 +8,8 @@ max_midi: 108
 learning_rate: 1e-5
 epochs: 2500
 download: False
-data_root: './dataset'
+data_root: '/import/c4dm-datasets/diffroll_data/'
+# data_root: './data'
 pin_memory: True
 
 
