--- a/config/model/ClassifierFreeDiffRoll.yaml
+++ b/config/model/ClassifierFreeDiffRoll.yaml
@@ -2,7 +2,7 @@ model:
   name: 'ClassifierFreeDiffRoll'
   args:
       residual_channels: 512
-      unconditional: False
+      unconditional: True
       condition: 'fixed' # either trainable_spec or trainable_z, or fixed
       n_mels: ${spec.args.n_mels}
       residual_layers: 15
