--- a/config/model/ClassifierFreeDiffPerformer.yaml
+++ b/config/model/ClassifierFreeDiffPerformer.yaml
@@ -9,7 +9,7 @@ model:
       kernel_size: 3
       dilation_base: 2
       dilation_bound: 4
-      spec_dropout: 0.1
+      cond_dropout: 0.1
       norm_args:
       - 0
       - 1
