--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
+einops==0.6.1
+hydra-core==1.3.2
+ipython==8.14.0
+matplotlib==3.5.1
+numpy==1.22.4
+omegaconf==2.0.6
+pandas==1.3.4
+partitura==1.2.1
+pytorch_lightning==1.9.2
+scikit_learn==1.3.0
+scipy==1.7.3
+torch==1.10.2
 tqdm==4.64.0
-hydra-core==1.2.0
-einops==0.4.1
-pytorch_lightning==1.6.4
-matplotlib==3.5.2
-joblib==1.1.0
-mido==1.2.10
-pydub==0.25.1
-git+https://github.com/KinWaiCheuk/AudioLoader.git
---extra-index-url https://download.pytorch.org/whl/cu113
-torch==1.11.0+cu113
-torchvision==0.12.0+cu113
-torchaudio==0.11.0+cu113
-scikit-learn==1.1.1
-mir_eval==0.7
