--- a/config/task/classifierfree_diffusion.yaml
+++ b/config/task/classifierfree_diffusion.yaml
@@ -5,19 +5,13 @@ task:
   loss_type: 'l1'
   loss_keys:
       - 'diffusion_loss'
+      - 'tempo_vel_loss'
   beta_start: 0.0001
-  beta_end: 0.02
+  beta_end: 0.2
   training:
-<<<<<<< HEAD
       mode: 'epsilon' # either 'x_0' or epsilon
   sampling:
       type: 'cfdg_ddpm'
-      w: 1.8
+      w: 1.2
   sample_steps_frac: ${test.sample_steps_frac}
   transfer: ${test.transfer}
-=======
-      mode: 'x_0' # either 'x_0' or epsilon
-  sampling:
-      type: 'cfdg_ddpm_x0'
-      w: 0
->>>>>>> 8fdc74dfcd93085e9616fb31fb53a1d7a02bb4d5
