--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,53 +1,30 @@
-gpus: 1
-<<<<<<< HEAD
-val_freq: 10
-learning_rate: 1e-6
-epochs: 300
+gpus: [0]
+val_freq: 20
+learning_rate: 5e-5
+epochs: 400
 download: False
 load_trained: False
 test_only: False
-pretrained_path: 'artifacts/checkpoint/len200-beta0.02-steps1000-epsilon-L36-C512-cfdg_ddpm-w=0-p=0.2-k=3-dia=2-4/399e-diffusion_loss0.05.ckpt'
+pretrained_path: 'artifacts/checkpoint/len200-beta0.2-steps1000-epsilon-TransferTrue-ssfrac0.75-L12-C512-cfdg_ddpm-w=10-p=0.2-k=3-dia=2-4/last.ckpt'
 data_root: '/import/c4dm-datasets-ext/DiffPerformer/'
 seg_len: 200
 pin_memory: True
 random_seed: 13
 
 test:
-    sample_steps_frac: 1
-    transfer: False
+    sample_steps_frac: 0.25
+    transfer: True
 
 dataloader:
     train:
-        batch_size: 256
-=======
-val_freq: 200
-learning_rate: 1e-6
-epochs: 1500
-download: False
-load_trained: False
-test_only: False
-pretrained_path: 'artifacts/checkpoint/len300-beta0.02-steps1500-x_0-L15-C512-cfdg_ddpm_x0-w=0-p=0.1-k=3-dia=2-4/1244e-diffusion_loss0.03.ckpt'
-data_root: './data'
-seg_len: 300
-pin_memory: True
-random_seed: 13
-
-
-dataloader:
-    train:
-        batch_size: 32
->>>>>>> 8fdc74dfcd93085e9616fb31fb53a1d7a02bb4d5
+        batch_size: 192
         num_workers: 40
         shuffle: True
         pin_memory: ${pin_memory}
         prefetch_factor: 2
         persistent_workers: True
     val:
-<<<<<<< HEAD
         batch_size: 16
-=======
-        batch_size: 8
->>>>>>> 8fdc74dfcd93085e9616fb31fb53a1d7a02bb4d5
         num_workers: 4
         shuffle: False
         pin_memory: ${pin_memory}
@@ -65,9 +42,10 @@ trainer:
     
 modelcheckpoint:
     # dirpath: 'artifacts/checkpoint'
-    monitor: 'Val/diffusion_loss'
-    filename: '{epoch:02d}e-diffusion_loss{Train/diffusion_loss:.2f}'
-    save_top_k: 2
+    monitor: 'Val/tempo_vel_loss'
+    filename: '{epoch:02d}e-tv_loss{Train/tv_loss:.2f}'
+    # filename: '{epoch:02d}e-diffusion_loss{Train/diffusion_loss:.2f}'
+    save_top_k: 1
     save_last: True
     mode: "min"
     auto_insert_metric_name: False    
@@ -77,10 +55,6 @@ modelcheckpoint:
 defaults:
     - model: ClassifierFreeDenoiser
     - task: classifierfree_diffusion
-<<<<<<< HEAD
-=======
-    - dataset: MAESTRO
->>>>>>> 8fdc74dfcd93085e9616fb31fb53a1d7a02bb4d5
 
 
 hydra:  
