--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,23 +1,24 @@
 gpus: [0]
-val_freq: 20
+val_freq: 10
 learning_rate: 5e-5
 epochs: 400
 download: False
 load_trained: False
 test_only: False
-pretrained_path: 'artifacts/checkpoint/len200-beta0.2-steps1000-epsilon-TransferTrue-ssfrac0.75-L12-C512-cfdg_ddpm-w=10-p=0.2-k=3-dia=2-4/last.ckpt'
+pretrained_path: 'artifacts/checkpoint/len200-beta0.2-steps1000-epsilon-TransferTrue-ssfrac0.75-L12-C512-cfdg_ddpm-w=1.2-p=0.1-k=3-dia=2-4/last.ckpt'
 data_root: '/import/c4dm-datasets-ext/DiffPerformer/'
 seg_len: 200
 pin_memory: True
 random_seed: 13
 
 test:
-    sample_steps_frac: 0.25
+    sample_steps_frac: 0.75
     transfer: True
 
 dataloader:
+    mixup: True
     train:
-        batch_size: 192
+        batch_size: 512
         num_workers: 40
         shuffle: True
         pin_memory: ${pin_memory}
