dataset normalization, and loss balancing

--- a/config/model/ClassifierFreeDenoiser.yaml
+++ b/config/model/ClassifierFreeDenoiser.yaml
@@ -5,7 +5,7 @@ model:
       unconditional: False
       condition: 'fixed' # either trainable_score or fixed
       p_codec_rows: 5
-      s_codec_rows: 4
+      condition_rows: 11
       seg_len: ${seg_len}
       residual_layers: 12
       kernel_size: 3
