--- a/config/task/classifierfree_diffusion.yaml
+++ b/config/task/classifierfree_diffusion.yaml
@@ -12,12 +12,13 @@ task:
       - 'recon_timing_loss'
       - 'recon_duration_loss'
       - 'recon_pedal_loss'
-  loss_weight: [5, 3, 3, 3, 1]  
+  loss_weight: [1, 1, 1, 1, 1]  
   recon_loss_weight: 0.2   # the weight in comparison to the diffusion loss
   beta_start: 0.0001
   beta_end: 0.2
   training:
       mode: 'epsilon' # either 'x_0' or epsilon
+      target: ${train_target}
   sampling:
       type: 'cfdg_ddpm'
       w: 1.2
