--- a/config/evaluate.yaml
+++ b/config/evaluate.yaml
@@ -1,6 +1,8 @@
+renderer: "diff"  # "basismixer"
 gpus: [0]
 epochs: 400
 learning_rate: 5e-5
+renderer_path: /homes/hz009/Research/basismixer/bin/render_performance.py
 pretrained_path: 'artifacts/checkpoint/targetgen_noise-lw11111-len200-beta0.02-steps1000-epsilon-TransferTrue-ssfrac0.75-L12-C512-cfdg_ddpm-w=1.2-p=0.1-k=3-dia=2-4/last.ckpt'
 data_root: '/import/c4dm-datasets-ext/DiffPerformer/'
 seg_len: 200
