--- a/config/evaluate.yaml
+++ b/config/evaluate.yaml
@@ -1,4 +1,4 @@
-renderer: "diff"  # "basismixer"
+renderer: "diff"  # "diff", "basismixer", "scoreperformer", "label"
 gpus: [0]
 epochs: 400
 learning_rate: 5e-5
