data for inference retrain

--- a/config/inference.yaml
+++ b/config/inference.yaml
@@ -1,4 +1,3 @@
-renderer: "diff" 
 gpus: [0]
 epochs: 400
 learning_rate: 5e-5
@@ -8,13 +7,18 @@ pretrained_path: 'artifacts/checkpoint/targetgen_noise-lw11111-len200-beta0.02-s
 seg_len: 200
 pin_memory: True
 random_seed: 13
+condition_eval: False
 
-score_path: "../Datasets/vienna4x22/musicxml/Chopin_op10_no3.musicxml"
+train_target: 'gen_noise' # 'gen_noise' or 'transfer' 
+
+score_path: "../Datasets/vienna4x22/musicxml/Mozart_K331_1st-mov.musicxml"
+# score_path: "../Datasets/vienna4x22/musicxml/Chopin_op10_no3.musicxml"
+
+
 
 test:
     sample_steps_frac: 1
     transfer: False
-
         
 trainer:
     gpus: ${gpus}
