--- a/config/task/classifierfree_diffusion.yaml
+++ b/config/task/classifierfree_diffusion.yaml
@@ -2,6 +2,7 @@ dataset_means: None
 dataset_stds: None
 samples_root: 'artifacts/samples'
 lr: ${learning_rate}
+drop_c_con: ${drop_c_con}
 eval_starting_epoch: 0
 timesteps: 1000
 loss_type: 'l1'
